Add games, platforms & types routes
