# swagger_output.json
@@ -73,6 +73,28 @@
         }
       }
     },
+    "/game/{id}": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "An ID or a slug identifying this Game."
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      }
+    },
     "/platforms": {
       "get": {
         "description": "",
